traces/bug_744.txt
examples++-mpi/MUMPS_FreeFem.cpp:1929: error: DEAD_STORE
  The value written to &ierr (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/MUMPS_FreeFem.cpp:1929:8: Write of unused value
1927.   	    if(myid !=0) {
1928.   	      int commSize;	    
1929.   	      ierr=MPI_Comm_size(comm,&commSize);
               ^
1930.   	      commSize=commSize-1;
1931.   	      int myidpar=myid-1;
